tests/NormalTests/paczka1/small_fuzzy/70634881.err
Error in line 1: XRvqpRgNTs A998 0,9
Error in line 6: uj2dMZX55i S930 55,2
